<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_top_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/loveintern_splash"
            android:contentDescription="@null"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/loveintern_bg"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <LinearLayout
                android:id="@+id/ll_weixin_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_weixin"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/icon_login_weixin"
                    android:contentDescription="@null"
                    android:duplicateParentState="true"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/weixin_login"
                    android:textColor="@color/loveintern_register_login_weixin_text_color"
                    android:textSize="@dimen/size_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_qq"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/icon_login_qq"
                    android:contentDescription="@null"
                    android:duplicateParentState="true"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/login_button_text_qq"
                    android:textColor="@color/loveintern_register_login_qq_text_color"
                    android:textSize="@dimen/size_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sina_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_sina"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/icon_login_weibo"
                    android:contentDescription="@null"
                    android:duplicateParentState="true"
                    android:scaleType="centerInside" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/login_button_text_sina"
                    android:textColor="@color/loveintern_register_login_weibo_text_color"
                    android:textSize="@dimen/size_2" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" >

            <View
                style="@style/divider_line_style_dark"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/btn_register_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loveintern_register_login_btn_bg"
                android:gravity="center"
                android:onClick="onClick"
                android:text="登录/注册"
                android:textColor="@color/loveintern_register_login_text_color"
                android:textSize="@dimen/size_3" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>